cmake_minimum_required(VERSION 2.6)
project(test_cplus)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -g  ")

add_subdirectory(algorithm)
add_subdirectory(boost)
add_subdirectory(design_pattern)
add_subdirectory(function)
add_subdirectory(general)
add_subdirectory(move)
add_subdirectory(oop)
add_subdirectory(operator)
add_subdirectory(smart_pointer)
add_subdirectory(stl)
add_subdirectory(stream)
add_subdirectory(template)
add_subdirectory(throw_try_catch)
